--- a/src/app/pages/order/order-form.component.html
+++ b/src/app/pages/order/order-form.component.html
@@ -1,30 +1,35 @@
-<form novalidate (ngSubmit)="saveOrder()" [formGroup]="orderForm">
-  <mat-card>
+<mat-card class="cardWithShadow theme-card">
+  <mat-card-header>
+    <mat-card-title class="m-b-0">{{pageTitle()}}</mat-card-title>
+  </mat-card-header>
+  <!-- <mat-toolbar style="background-color: #FFF">
+    <mat-toolbar-row>
+      <span class="view-card-title"> {{pageTitle}}</span>
+      <span class="title-spacer"></span>
+      <mat-card-actions>
+        <button mat-mini-fab class="primary" style="margin-right:10px; background-color:darkgray" type="submit"
+          [disabled]='!orderForm.valid'>
+          <mat-icon>save</mat-icon>
+        </button>
+        <button mat-mini-fab class="" style="margin-right:10px; " [routerLink]="['/order']">
+          <mat-icon>cancel</mat-icon>
+        </button>
+        <button mat-mini-fab class="accent" style="margin-right:10px; background-color:#e07c9e"
+          (click)="addProduct($event)">
+          <mat-icon>add</mat-icon>
+        </button>
+      </mat-card-actions>
+    </mat-toolbar-row>
+  </mat-toolbar> -->
 
-    <mat-toolbar style="background-color: #FFF">
-      <mat-toolbar-row>
-        <span class="view-card-title"> {{pageTitle}}</span>
-        <span class="title-spacer"></span>
-        <mat-card-actions>
-          <button mat-mini-fab class="primary" style="margin-right:10px; background-color:darkgray" type="submit"
-            [disabled]='!orderForm.valid'>
-            <mat-icon>save</mat-icon>
-          </button>
-          <button mat-mini-fab class="" style="margin-right:10px; " [routerLink]="['/orders']">
-            <mat-icon>cancel</mat-icon>
-          </button>
-          <button mat-mini-fab class="accent" style="margin-right:10px; background-color:#e07c9e"
-            (click)="addProduct($event)">
-            <mat-icon>add</mat-icon>
-          </button>
-        </mat-card-actions>
-      </mat-toolbar-row>
-    </mat-toolbar>
+
 
     <mat-card-content style="margin: 5 0 5 0px;">
+      <form novalidate (ngSubmit)="saveOrder()" [formGroup]="orderForm">
+
       <div class="form-card">
         <mat-grid-list cols="12" rowHeight="80px">
-          <mat-grid-tile [colspan]="fieldColspan">
+          <!-- <mat-grid-tile [colspan]="fieldColspan">
             <mat-form-field class="form-field" appearance="outline">
               <mat-select placeholder="Select Customer" #customerIdId formControlName="customerId"
                 [(value)]="order.customerId">
@@ -33,7 +38,7 @@
                 </mat-option>
               </mat-select>
             </mat-form-field>
-          </mat-grid-tile>
+          </mat-grid-tile> -->
           <mat-grid-tile [colspan]="fieldColspan">
             <mat-form-field class="form-field" appearance="outline">
               <input matInput placeholder="Reference No" id="referenceId" type="text"
@@ -52,25 +57,26 @@
               </mat-error>
             </mat-form-field>
           </mat-grid-tile>
-          <mat-grid-tile [colspan]="fieldColspan">
+          <!-- <mat-grid-tile [colspan]="fieldColspan">
             <mat-form-field class="form-field" appearance="outline">
               <input matInput placeholder="Quantity" id="quantityId" type="number" placeholder="Quantity (required)"
                 formControlName="quantity" />
               <mat-error *ngIf="displayMessage.quantity">
-                <!-- {{displayMessage.quantity}} -->
               </mat-error>
             </mat-form-field>
-          </mat-grid-tile>
+          </mat-grid-tile> -->
           <mat-grid-tile [colspan]="fieldColspan">
             <mat-form-field class="form-field" appearance="outline">
-              <input matInput [matDatepicker]="orderpickerId" placeholder="Order date" [value]="order.orderDate">
+              <input matInput [matDatepicker]="orderpickerId" placeholder="Order date"   formControlName="orderDate"  > 
+              <!-- [value]="order.orderDate"> -->
               <mat-datepicker-toggle matSuffix [for]="orderpickerId"></mat-datepicker-toggle>
               <mat-datepicker #orderpickerId></mat-datepicker>
             </mat-form-field>
           </mat-grid-tile>
           <mat-grid-tile [colspan]="fieldColspan">
             <mat-form-field class="form-field" appearance="outline">
-              <input matInput [matDatepicker]="shippedDateId" placeholder="Shipped date" [value]="order.shippedDate">
+              <input matInput [matDatepicker]="shippedDateId" placeholder="Shipped date"  formControlName="shippedDate"  > 
+              <!-- [value]="order.shippedDate"> -->
               <mat-datepicker-toggle matSuffix [for]="shippedDateId"></mat-datepicker-toggle>
               <mat-datepicker #shippedDateId></mat-datepicker>
             </mat-form-field>
@@ -113,20 +119,28 @@
 
       <!-- product list -->
 
-      <mat-list *ngIf="order!=null && order.products!=null">
+      <!-- <mat-list *ngIf="order!=null && order.products!=null">
         <h3 mat-subheader>Products</h3>
         <mat-list-item style="background-color:#e7ecf7; padding-bottom:2px; margin-bottom:5px;"
           *ngFor="let product of order.products">
           <mat-icon mat-list-icon>folder</mat-icon>
-          <h4 mat-line>{{product.productName}} </h4>
+          <h4 mat-line>{{product.name}} </h4>
           <button mat-mini-fab style="background-color:lightgrey;float:right;" (click)="openDialog(product)">
             <mat-icon>delete</mat-icon>
           </button>
-          <p mat-line> AUD ${{product.unitPrice | number: '0.00' }} </p>
+          <p mat-line> AUD ${{product.price | number: '0.00' }} </p>
         </mat-list-item>
-      </mat-list>
+      </mat-list> -->
       <div class='has-error' *ngIf='errorMessage'>{{errorMessage}}</div>
+      <div class="m-t-12 button-float-right">
+        <button mat-flat-button extended color="secondary" class="m-r-8" type="submit"
+          [disabled]='!orderForm.valid'><mat-icon fontIcon="save"></mat-icon>Submit</button>
+        <button mat-stroked-button extended color="warn" [routerLink]="['/customer']">
+          <mat-icon fontIcon="cancel"></mat-icon>Cancel</button>
+      </div>
+  
+  </form>
     </mat-card-content>
     <!-- </div> -->
-  </mat-card>
-</form>
+
+</mat-card>
