--- a/src/app/pages/product/product-list.component.css
+++ b/src/app/pages/product/product-list.component.css
@@ -1,12 +1,52 @@
-thead {
-  color: #337AB7;
-}
-
 
 .title-spacer {
   flex: 1 1 auto;
 }
 
-.search-form-fileld {
-  margin-right: 20px;
+
+.prod-card {
+  /* background-color: dodgerblue; */
+  /* color: white; */
+  /* padding: 1rem; */
+  height: 26rem;
+}
+
+.card-img {
+  top: 0px;
+  width: 100%;
+  height: 60%;
+  object-fit: cover;
+  /* position: absolute; */
+}
+
+.card-content {
+  padding: 0;
+}
+
+.card-view {
+  max-width: 1100px;
+  margin: 0 auto;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+
+.chips {
+  display: flex;
+  flex-direction: row;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: end;
+  justify-content: flex-end;
+  margin-left: 1rem;
+}
+
+.chip {
+  margin-left: calc(-0.75* var(8px));
+    width: 20px;
+    height: 20px;
+    /* background-color: rgb(255, 192, 203); */
+    border-radius: 50%;
+    border: 2px solid rgb(255, 255, 255);
+    box-shadow: rgba(0, 0, 0, 0.24) -1px 1px 2px inset
 }
