--- a/src/app/pages/product/product-list.component.html
+++ b/src/app/pages/product/product-list.component.html
@@ -1,114 +1,76 @@
-<!-- <mat-sidenav-container> -->
-<mat-card class='light' style="height: 100%;">
+@if (products.isLoading()) {
+  <mat-progress-bar mode="query" />
+  } 
 
-  <mat-card-header>
-    <mat-card-title class="view-card-title">
-      <h1>{{pageTitle }}</h1>
-    </mat-card-title>
-  </mat-card-header>
-  <mat-toolbar>
+  <mat-card >
+    <mat-toolbar >
     <mat-toolbar-row>
-      <button mat-mini-fab style="margin-right:10px; background-color:#e07c9e" [routerLink]="['/products/edit', 0]">
-        <mat-icon>add</mat-icon>
-      </button>
-
-      <button mat-mini-fab style="margin-right:10px; background-color:darkgray" (click)="reset()">
-        <mat-icon>refresh</mat-icon>
-      </button>
-
+      <span class="f-w-800 f-s-24"> {{pageTitle}}</span>
       <span class="title-spacer"></span>
-      <mat-form-field appearance="outline" class="search-form-fileld">
-        <mat-label>Filter</mat-label>
-        <input matInput>
-        <mat-icon>filter_list</mat-icon>
-      </mat-form-field>
+      <mat-card-actions>
+        <!-- <button mat-mini-fab color="bg-light-primary" class="m-r-16" [routerLink]="['/customer/new']">
+          <mat-icon>add</mat-icon>
+        </button> -->
+        <button mat-mini-fab class="bg-light-secondary" (click)="reload()">
+          <mat-icon>refresh</mat-icon>
+        </button>
+      </mat-card-actions>
     </mat-toolbar-row>
   </mat-toolbar>
+  
+    <mat-toolbar class="m-t-8">
+      <mat-toolbar-row>
+        <mat-form-field appearance="outline" class="search-form-fileld w-100" color="primary">
+          <mat-label>Filter</mat-label>
+          <input matInput (input)="query.set($any($event.target).value)" />
+  
+          <mat-icon>filter_list</mat-icon>
+        </mat-form-field>
+  
+      </mat-toolbar-row>
+    </mat-toolbar>
+  @if (!products.isLoading()) {
 
-  <mat-table #table [dataSource]="dataSource" matSort>
-    <ng-container matColumnDef="productName">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Product Name </mat-header-cell>
-      <mat-cell *matCellDef="let product">
-        <!-- <a [routerLink]="['/product', product.id]"> -->
-        {{product.productName}}
-        <!-- </a> -->
-      </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="unitPrice">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Price </mat-header-cell>
-      <mat-cell *matCellDef="let product"> {{ product.unitPrice | currency:'AUD'}} </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="unitInStock">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Quantity In Stock </mat-header-cell>
-      <mat-cell *matCellDef="let product"> {{ product.unitInStock | number: '0.0-0' }} </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="categoryName">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Category </mat-header-cell>
-      <mat-cell *matCellDef="let product"> {{product.category.categoryName}}</mat-cell>
-    </ng-container>
+  <div class="card-view">
+    @for (product of paginatedList(); track product.id ) {
+    <mat-card key="product.id" class="prod-card" appearance="outlined">
+    
+      <img mat-card-image class="card-img" [src]="product.imageUri" alt="Photo of a Shiba Inu">
+      <mat-card-content class="mat-card-content f-w-800">
 
-    <ng-container matColumnDef="id">
-      <mat-header-cell *matHeaderCellDef style="justify-content:right;">
-        <!-- <button mat-button style="color:white; background-color:darkgrey" (click)="resetListFilter()">Reset</button> -->
-      </mat-header-cell>
-      <mat-cell *matCellDef="let product" style="justify-content:right;">
-        <button mat-mini-fab style="background-color:teal; min-height: 30px;   margin: 5px;"
-          [routerLink]="['/products/edit', product.id]">
-          <mat-icon>edit</mat-icon>
-        </button>
-        <button mat-mini-fab style="background-color:lightblue; min-height: 30px;  margin: 5px;"
-          (click)="openDialog(product.id)">
-          <mat-icon>delete</mat-icon>
-        </button>
-      </mat-cell>
-    </ng-container>
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-  </mat-table>
-  <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[5, 10]">
+        <h3>{{product.name}}</h3>
+
+      </mat-card-content>
+      <mat-card-actions style="display:flex;justify-content: space-between;">
+        <div style="display: inline-flex;">{{product.price | currency}}
+          <div class="chips">
+            @for (col of product.colors; track $index){
+            <div class="chip" [style.background-color]="col"></div>
+            }
+          </div>
+        </div>
+        <div>
+          <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item [routerLink]="['/product/edit/', product.id]">
+              <mat-icon>edit</mat-icon>
+              <span>Edit</span>
+            </button>
+            <button mat-menu-item (click)="openDialog(product.id)">
+              <mat-icon>delete</mat-icon>
+              <span>Delete</span>
+            </button>
+          </mat-menu>
+        </div>
+      </mat-card-actions>
+    </mat-card>
+  
+    }
+  </div>
+  }
+  <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[5, 10]" [length]="paginatorLength()"  (page)="handlePageEvent($event)">
   </mat-paginator>
 
 </mat-card>
-<!-- <mat-sidenav class="search-panel" position="end" dark #sidenav mode="push" opened="false">
-
-  <mat-card class="profile-card">
-    <mat-card-header>
-      <div mat-card-avatar class="avatar">
-        <mat-icon>search</mat-icon>
-      </div>
-      <mat-card-title>
-        Advanced Search
-      </mat-card-title>
-    </mat-card-header>
-  </mat-card>
-  <mat-nav-list style="margin-left:20px;">
-    <mat-form-field>
-      <input matInput type="text" placeholder="Product Name" style="width:200px;" name="product"
-        [(ngModel)]="searchFilter.productName" #product />
-    </mat-form-field>
-    <mat-form-field>
-      <input matInput type="text" placeholder="Price" style="width:200px;" name="price" [(ngModel)]="searchFilter.price"
-        #price />
-    </mat-form-field>
-    <mat-form-field>
-      <input matInput type="text" placeholder="Qunantity" style="width:200px;" name="quantity"
-        [(ngModel)]="searchFilter.quantity" #price />
-    </mat-form-field>
-
-  </mat-nav-list>
-
-  <mat-divider></mat-divider>
-  <mat-card-header>
-    <mat-action-list>
-      <button mat-raised-button style="color:lightgrey; background-color:darkgreen; margin:5px;"
-        (click)="searchProducts(searchFilter);sidenav.toggle()">
-        <mat-icon>search</mat-icon>Search
-      </button>
-      <button mat-raised-button style="color:lightgrey; background-color:darkred;margin:5px;"
-        (click)="resetSearchFilter(sidenav)">
-        <mat-icon>refresh</mat-icon>Reset
-      </button>
-    </mat-action-list>
-  </mat-card-header>
-</mat-sidenav> -->
-<!-- </mat-sidenav-container> -->
